pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingFunction1ParameterListDelimiter.pkl
f = (arg -> arg + 1
res1 = 42
